selfhost/test/typechecker/match/error_destructuring_variant_too_many.out
Error at %FILE_NAME%:5:22
Incorrect number of destructuring arguments
  |    Color.RGB(r, g, b, a) => r + g + b + a
                          ^
Expected 3, but 4 were passed
